javascript bug fix minor css changes

--- a/confirmation.html
+++ b/confirmation.html
@@ -12,6 +12,8 @@
         <meta name="author" content="doug@dynastybuildingservices.com">
         <meta name="copyright" content="Dynasty Building Services Inc. 1981 - 2020">
         <link rel="stylesheet" href="index.css">
+        <script src="./index.js" defer></script>
+
     </head>
     <body>
         <header>
@@ -38,7 +40,6 @@
                         <a href="http://dynastybuildingservices.com/careers.htm" class="navbar_link">Join Us</a>
                     </li>
                 </ul>
-                </ul>
                 <div id="burger" class="burger">
                     <div class="burger-l1"><br></div>
                     <div class="burger-l2"><br></div>
@@ -55,7 +56,7 @@
                     <div class="content_info content_info--reverse">
                         <div class="career">
                             <p class="content_info_txt">
-                                Thank you for contacting Dynasty Building Services. Your information was successfully submitted. A representative will contact you shortly.Thank you for contacting Dynasty Building Services. Your information was successfully submitted. A representative will contact you shortly.                           
+                                Thank you for contacting Dynasty Building Services. Your information was successfully submitted. A representative will contact you shortly.                  
                             </p>
                         </div>
                         <img src="./images/fleet-management-vans.jpg" class="content_info_img" alt="work">
@@ -69,6 +70,5 @@
                 <p class="footer_txt"><a href="http://eliezerbarbosa.com">Designed by Eliezer Barbosa</a></p>
             </div>
         </footer>
-        <script type="text/javascript" src="./index.js"></script>
     </body>
 </html>
